--- a/_site.yml
+++ b/_site.yml
@@ -14,5 +14,7 @@ navbar:
 #      href: dash3.html
     - text: "Contact"
       href: contact.html
+includes:
+  in_header: ga.html
 output:
     distill::distill_article
