--- a/_site.yml
+++ b/_site.yml
@@ -14,7 +14,8 @@ navbar:
 #      href: dash3.html
     - text: "Contact"
       href: contact.html
-includes:
-  in_header: ga.html
 output:
-    distill::distill_article
+  distill::distill_article:
+    includes:
+      in_header: ga.html
+
